# refloid

./: .gitignore  CMakeLists.txt  README.md
external_libs/spdlog/: README.md
nslaift/: CMakeLists.txt  main.cpp  zmq_parsing_scene.py
nslaift/src/device/: app_config.h  helpers.h  per_ray_data_gpu.h  pinhole_cam.cu
nslaift/src/device/cameras/: pinhole_cam.cu
nslaift/src/device/includes/: helpers_gpu.h  light_definition.h  per_ray_data_gpu.h  random_number_generators_gpu.h  vertex_attributes.h
nslaift/src/device/intersection_programs/: cuboid_intersect.cu  mesh_intersect.cu  sphere_intersect.cu  triangle_intersect.cu
nslaift/src/device/lights/: point_light.cu
nslaift/src/device/shaders/: miss.cu
nslaift/src/device/shaders/ch_ah_programs/: blank.cu  ch_normal.cu  normal.cu  phong.cu
nslaift/src/host/: RT_camera.cpp  RT_camera.h  RT_cuboid.cpp  RT_cuboid.h  RT_helper.cpp  RT_helper.h  RT_light.cpp  RT_light.h  RT_lightPoint.cpp  RT_lightSource.cpp  RT_lightSource.h  RT_material.cpp  RT_material.h  RT_mesh.h  RT_object.cpp  RT_object.h  RT_scene.cpp  RT_scene.h  RT_sphere.cpp  RT_sphere.h
nslaift_integration/: CMakeLists.txt  main.cpp
nslaift_integration/src/host/: RT_camera.cpp  RT_camera.h  RT_helper.cpp  RT_helper.h  RT_matrixHelpers.cpp  RT_matrixHelpers.h  RT_object.cpp  RT_object.h  RT_scene.cpp  RT_scene.h
optixBuffersOfBuffers/: CMakeLists.txt
refloid/src/device/cameras/: pinhole_cam.h
refloid/src/device/includes/: per_ray_data_gpu.h  rt_function.h
refloid/src/device/intersection_programs/: sphere_intersect.cu
refloid/src/device/lights/: point_light.cu
refloid/src/device/shaders/ch_ah_programs/: normal.cu
refloid/src/host/: RT_helper.cpp  RT_helper.h  RT_lightPoint.h  RT_material.cpp  RT_matrixHelpers.h  RT_mesh.cpp  RT_object.h  RT_scene.cpp  RT_scene.h  RT_sphere.cpp
